infrastructure/deployment/kustomize/apps/staging/weave-gitops/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ww-gitops
  namespace: flux-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pnt-gitops.petadev.work`)
      kind: Rule
      services:
        - kind: Service
          name: ww-gitops-weave-gitops
          namespace: flux-system
          port: 9001
